crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__assign_for.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        For(
            ForStmt {
                range: 0..24,
                is_async: false,
                target: Name(
                    NameExpr {
                        range: 4..5,
                        id: "x",
                        ctx: Store,
                    },
                ),
                iter: Tuple(
                    TupleExpr {
                        range: 9..18,
                        elts: [
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 10..11,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 13..14,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 16..17,
                                    value: Int(
                                        3,
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                    },
                ),
                body: [
                    Pass(
                        PassStmt {
                            range: 20..24,
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
    [],
)
