crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__assign_list.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..18,
                targets: [
                    List(
                        ListExpr {
                            range: 0..6,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 1..2,
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 4..5,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                ],
                value: Tuple(
                    TupleExpr {
                        range: 9..18,
                        elts: [
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 10..11,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 13..14,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 16..17,
                                    value: Int(
                                        3,
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                    },
                ),
            },
        ),
    ],
    [],
)
