crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__assign_list_comp.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..26,
                targets: [
                    Name(
                        NameExpr {
                            range: 0..1,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                ],
                value: ListComp(
                    ListCompExpr {
                        range: 4..26,
                        elt: Name(
                            NameExpr {
                                range: 5..6,
                                id: "y",
                                ctx: Load,
                            },
                        ),
                        generators: [
                            Comprehension {
                                range: 7..25,
                                target: Name(
                                    NameExpr {
                                        range: 11..12,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                                iter: Tuple(
                                    TupleExpr {
                                        range: 16..25,
                                        elts: [
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 17..18,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 20..21,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 23..24,
                                                    value: Int(
                                                        3,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                    },
                                ),
                                ifs: [],
                                is_async: false,
                            },
                        ],
                    },
                ),
            },
        ),
    ],
    [],
)
