crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__assign_with.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        With(
            WithStmt {
                range: 0..17,
                is_async: false,
                items: [
                    WithItem {
                        range: 5..11,
                        context_expr: NumberLiteral(
                            NumberLiteralExpr {
                                range: 5..6,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                NameExpr {
                                    range: 10..11,
                                    id: "x",
                                    ctx: Store,
                                },
                            ),
                        ),
                    },
                ],
                body: [
                    Pass(
                        PassStmt {
                            range: 13..17,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
