crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__aug_assign_attribute.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        AugAssign(
            AugAssignStmt {
                range: 0..16,
                target: Attribute(
                    AttributeExpr {
                        range: 0..3,
                        value: Name(
                            NameExpr {
                                range: 0..1,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        attr: Identifier {
                            id: "y",
                            range: 2..3,
                        },
                        ctx: Store,
                    },
                ),
                op: Add,
                value: Tuple(
                    TupleExpr {
                        range: 7..16,
                        elts: [
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 8..9,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 11..12,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 14..15,
                                    value: Int(
                                        3,
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                    },
                ),
            },
        ),
    ],
    [],
)
